recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:8: error: illegal start of simple expression
		spiral(steps = steps - 1 ,angle,1 - steps ,);
                                                           ^Spiral:9: error: ')' expected but '}' found.
	}	
        ^