recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if ( steps == 0){
		return
	}else{
		avance(length)
		droite(angle)
		spiral(steps = steps - 1 ,angle,1 - steps ,);
	}	
}


